5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4322/executions/1643_2703.log
== TEST (2019-04-08 18:20:36) 
-- CODE:
idade = int(input("qual sua idade? "))
	if (idade >= 18):
		mensagem = ("eleitor")
	else 
		mensagem = ("não é eleitor")
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if (idade >= 18):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:20:51) 
-- CODE:
idade = int(input("qual sua idade? "))
	if (idade >= 18):
		mensagem = ("eleitor")
	else 
		mensagem = ("não é eleitor")
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if (idade >= 18):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:21:03) 
-- CODE:
idade = int(input("qual sua idade? "))
	if (idade => 18):
		mensagem = ("eleitor")
	else 
		mensagem = ("não é eleitor")
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if (idade => 18):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:21:06) 
-- CODE:
idade = int(input("qual sua idade? "))
	if (idade > 18):
		mensagem = ("eleitor")
	else 
		mensagem = ("não é eleitor")
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if (idade > 18):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:21:23) 
-- CODE:
idade = int(input("qual sua idade? "))
	if (idade > 18):
		mensagem = ("eleitor")
	else 
		mensagem = ("não é eleitor")
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if (idade > 18):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:21:37) 
-- CODE:
idade = int(input("qual sua idade? "))
if (idade > 18):
		mensagem = ("eleitor")
else 
		mensagem = ("não é eleitor")
print(mensagem)
-- ERROR:
File "XXXX", line 4
    else 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:21:43) 
-- CODE:
idade = int(input("qual sua idade? "))
if (idade > 18):
		mensagem = ("eleitor")
else 
		mensagem = ("não é eleitor")
print(mensagem)
-- ERROR:
File "XXXX", line 4
    else 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:21:56) 
-- CODE:
idade = int(input("qual sua idade? "))
if (idade > 18):
	mensagem = ("eleitor")
else:
	mensagem = ("não é eleitor")
print(mensagem)
-- OUTPUT:
não é eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:22:01) 
-- CODE:
idade = int(input("qual sua idade? "))
if (idade > 18):
	mensagem = ("eleitor")
else:
	mensagem = ("não é eleitor")
print(mensagem)
-- OUTPUT:
não é eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:22:27) 
-- CODE:
idade = int(input("qual sua idade? "))
if (idade > 18):
	mensagem = ("eleitor")
else:
	mensagem = ("não é eleitor")
	
print(mensagem)
-- OUTPUT:
não é eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:22:57) 
-- CODE:
idade = int(input("qual sua idade? "))
if (idade > 18):
	mensagem = ("eleitor")
else:
	mensagem = ("não é eleitor")
	
print(mensagem)
-- OUTPUT:
não é eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:23:05) 
-- CODE:
idade = int(input("qual sua idade? "))
if (idade > 18):
	mensagem = ("eleitor")
else:
	mensagem = ("não é eleitor")
	
print(mensagem)
-- OUTPUT:
não é eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:23:05) 
-- CODE:
idade = int(input("qual sua idade? "))
if (idade > 18):
	mensagem = ("eleitor")
else:
	mensagem = ("não é eleitor")
	
print(mensagem)
-- EXECUTION TIME:
0.13643
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2703/main.py", line 7, in <module>
    print(mensagem)
UnicodeEncodeError: 'ascii' codec can't encode character '\xe3' in position 1: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:23:15) 
-- CODE:
idade = int(input("qual sua idade? "))
if (idade > 18):
	mensagem = ("eleitor")
else:
	mensagem = ("não é eleitor")
	
print(mensagem)
-- OUTPUT:
não é eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:24:13) 
-- CODE:
idade = int(input("qual sua idade? "))
if (idade > 18):
	mensagem = ("eleitor")
else:
	mensagem = ("não é eleitor")
	
print(mensagem)
-- EXECUTION TIME:
0.181908
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2703/main.py", line 7, in <module>
    print(mensagem)
UnicodeEncodeError: 'ascii' codec can't encode character '\xe3' in position 1: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:24:13) 
-- CODE:
idade = int(input("qual sua idade? "))
if (idade > 18):
	mensagem = ("eleitor")
else:
	mensagem = ("não é eleitor")
	
print(mensagem)
-- OUTPUT:
não é eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:24:30) 
-- CODE:
idade = int(input("qual sua idade? "))
if (idade > 18):
	mensagem = ("eleitor")
else:
	mensagem = ("não_é_eleitor")
	
print(mensagem)
-- OUTPUT:
não_é_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:24:52) 
-- CODE:
idade = int(input("qual sua idade? "))
if (idade > 18):
	mensagem = ("eleitor")
else:
	mensagem = ("nao e eleitor")
	
print(mensagem)
-- OUTPUT:
nao e eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:24:58) 
-- CODE:
idade = int(input("qual sua idade? "))
if (idade > 18):
	mensagem = ("eleitor")
else:
	mensagem = ("nao e eleitor")
	
print(mensagem)
-- EXECUTION TIME:
0.131734
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao e eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:25:02) 
-- CODE:
idade = int(input("qual sua idade? "))
if (idade > 18):
	mensagem = ("eleitor")
else:
	mensagem = ("nao e eleitor")
	
print(mensagem)
-- EXECUTION TIME:
0.213626
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao e eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:25:03) 
-- CODE:
idade = int(input("qual sua idade? "))
if (idade > 18):
	mensagem = ("eleitor")
else:
	mensagem = ("nao e eleitor")
	
print(mensagem)
-- EXECUTION TIME:
0.180721
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao e eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
nao e eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
nao e eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:25:04) 
-- CODE:
idade = int(input("qual sua idade? "))
if (idade > 18):
	mensagem = ("eleitor")
else:
	mensagem = ("nao e eleitor")
	
print(mensagem)
-- EXECUTION TIME:
0.167501
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:25:04) 
-- CODE:
idade = int(input("qual sua idade? "))
if (idade > 18):
	mensagem = ("eleitor")
else:
	mensagem = ("nao e eleitor")
	
print(mensagem)
-- EXECUTION TIME:
0.168849
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:25:04) 
-- CODE:
idade = int(input("qual sua idade? "))
if (idade > 18):
	mensagem = ("eleitor")
else:
	mensagem = ("nao e eleitor")
	
print(mensagem)
-- EXECUTION TIME:
0.281173
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1643/2703/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:25:27) 
-- CODE:
t = int(input("qual sua idade? "))
if (t > 18):
	mensagem = ("eleitor")
else:
	mensagem = ("nao e eleitor")
	
print(mensagem)
-- EXECUTION TIME:
0.163133
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao e eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:25:28) 
-- CODE:
t = int(input("qual sua idade? "))
if (t > 18):
	mensagem = ("eleitor")
else:
	mensagem = ("nao e eleitor")
	
print(mensagem)
-- OUTPUT:
nao e eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:25:35) 
-- CODE:
t = int(input("qual sua idade? "))
if (t > 18):
	mensagem = ("eleitor")
else:
	mensagem = ("nao e eleitor")
	
print(mensagem)
-- EXECUTION TIME:
0.205347
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao e eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:41:56) 
-- CODE:
t = int(input("qual sua idade? "))
if (t >= 18):
	print("eleitor")
else:
	print("nao e eleitor")
	

-- OUTPUT:
nao e eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:42:01) 
-- CODE:
t = int(input("qual sua idade? "))
if (t >= 18):
	print("eleitor")
else:
	print("nao e eleitor")
	

-- EXECUTION TIME:
0.213492
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao e eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:42:05) 
-- CODE:
t = int(input("qual sua idade? "))
if (t >= 18):
	print("eleitor")
else:
	print("nao e eleitor")
	

-- OUTPUT:
nao e eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:42:17) 
-- CODE:
t = int(input("qual sua idade? "))
if (t >= 18):
	print("eleitor")
else:
	print("nao_eleitor")
	

-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:42:19) 
-- CODE:
t = int(input("qual sua idade? "))
if (t >= 18):
	print("eleitor")
else:
	print("nao_eleitor")
	

-- EXECUTION TIME:
0.239191
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
